# JukeBox-MusicPlayer-

./: .gitignore  CMakeLists.txt  authmanager.cpp  authmanager.h  client.cpp  client.h  command.cpp  command.h  commandtype.h  forgotpasswordwindow.cpp  forgotpasswordwindow.h  forgotpasswordwindow.ui  hostwindow.cpp  hostwindow.h  hostwindow.ui  joinwindow.cpp  joinwindow.h  joinwindow.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  message.cpp  message.h  message_displayer.cpp  mmd_musicroom.cpp  musicroom.cpp  musicroom.h  musicroom.ui  resources.qrc  server.cpp  server.h  signupwindow.cpp  signupwindow.h  signupwindow.ui  user.cpp  user.h
HostWindow/: hostwindow.cpp  hostwindow.h  hostwindow.ui
JoinWindow/: joinwindow.cpp  joinwindow.h  joinwindow.ui
Login/: authmanager.cpp  authmanager.h  forgotpasswordwindow.cpp  forgotpasswordwindow.h  forgotpasswordwindow.ui  loginwindow.cpp  loginwindow.h  signupwindow.cpp  signupwindow.h  signupwindow.ui  userdatafilemanager.cpp  userdatafilemanager.h
MessageDisplayer/: message_displayer.h
MusicRoom/: musicroom.cpp  musicroom.h  musicroom.ui
MusicRoom/AudioTrack/: audiotrack.cpp  audiotrack.h
MusicRoom/MusicPlayer/: musicplayer.cpp  musicplayer.h
MusicRoom/PlayList/: playlist.cpp  playlist.h
MusicRoom/Slots/: ClientSlots.cpp  ServerSlots.cpp  slots.cpp  slots.h
MusicRoom/Visualizer/: visualizerwidget.cpp  visualizerwidget.h
Network/ClientLogic/: client.cpp  client.h
Network/Command/: command.h  commandtype.h
Network/ServerLogic/: server.cpp  server.h
Random/: RandomGenerator.cpp  RandomGenerator.h
images/: app_icon.rc
